Fixed sidebar shifting down with popup open

--- a/src/index.scss
+++ b/src/index.scss
@@ -325,3 +325,7 @@ label {
         height: 0px;
     }
 }
+
+.app--body {
+    margin-top: 120px;
+}
