--- a/src/styles/_statuspage.scss
+++ b/src/styles/_statuspage.scss
@@ -1,5 +1,5 @@
 .statuspage {
-    padding: 0 20px;
+    padding: 0 20px 20px 20px;
 
     .statuspage--banner {
         display: flex;
